# aoc

./: .gitignore  README.md
2023/: Cargo.toml  README.md
2023/common/: Cargo.toml
2023/common/src/: lib.rs
2023/day1/: Cargo.toml
2023/day1/src/: lib.rs  log_out.txt  log_out_2.txt
2023/day2/: Cargo.toml
2023/day2/src/: lib.rs
2023/day3/: Cargo.toml
2023/day3/src/: lib.rs
2023/day4/: Cargo.toml
2023/day4/src/: lib.rs
2023/day5/: Cargo.toml
2023/day5/src/: lib.rs
2023/day6/: Cargo.toml
2023/day6/src/: lib.rs
2023/day7/: Cargo.toml
2023/day7/src/: both.rs  lib.rs  part_one.rs
2023/src/: main.rs
2024/: Cargo.toml
2024/src/: d0.rs  d03.rs  d04.rs  d06.rs  d07.rs  d08.rs  d09.rs  d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d9.rs  main.rs
2025/: .gitignore  Cargo.toml
2025/src/: BAD  GOOD  d01.rs  d02.rs  main.rs
