[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"
panic = "abort"

[profile.release]
codegen-unit = 1


[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
logos = "0.14.3"
rayon = "1.10.0"
seq-macro = "0.3.5"
tikv-jemallocator = "0.6.0"
